--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en"></html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial scale 1.0"> 
+    <h1>Hello World!</h1>
+</head>
