--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<head>
-    <link rel="stylesheet" href="styles.css">
+<html lang="en">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial scale 1.0"> 
-    <h1>Hello World!</h1>
-</head>
+    <title>Charlie Shipsides Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>Charlie Shipsides</h1>
+  </body>
+</html>
